[package]
name = "tonic-web-wasm-client"
version = "0.5.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "grpc-web implementation for use by tonic clients in browsers via webassembly"
homepage = "https://github.com/devashishdxt/tonic-web-wasm-client"
repository = "https://github.com/devashishdxt/tonic-web-wasm-client"
readme = "README.md"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "grpc-web", "tonic", "wasm"]
edition = "2021"

[dependencies]
base64 = "0.21.4"
byteorder = "1.4.3"
bytes = "1.5.0"
futures-util = "0.3.28"
http = "=1.1.0"
# http-body = "0.4.6"
http-body = "1.0.0"
hyper = "0.14.27"
httparse = "1.8.0"
js-sys = "0.3.64"
pin-project = "1.1.3"
thiserror = "1.0.49"
# tonic = { version = "0.11.0", default-features = false }
tonic = { git = "https://github.com/Catchawink/tonic.git", branch = "hyper-1.0", default-features = false }
tower-service = "0.3.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.64", features = [
    "Headers",
    "ReadableStream",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ServiceWorkerGlobalScope",
] }
http-body-util = "0.1.1"
